--- a/TaskReminderApplication/res/values/strings.xml
+++ b/TaskReminderApplication/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">TaskReminderApplication</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="no_reminders">No Reminders Yet</string>
+    <string name="no_reminders">No Reminders Yet Son</string>
     <string name="title">Title</string>
     <string name="body">Body</string>
     <string name="date">Reminder Date</string>
